--- a/Gifty/Resources/Info.plist
+++ b/Gifty/Resources/Info.plist
@@ -2,6 +2,13 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>UIAppFonts</key>
+	<array>
+		<string>NanumSquareEB.ttf</string>
+		<string>NanumSquareL.ttf</string>
+		<string>NanumSquareB.ttf</string>
+		<string>NanumSquareR.ttf</string>
+	</array>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>사진 앨범에 접근이 필요합니다.</string>
 	<key>UIApplicationSceneManifest</key>
